--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -10,15 +10,25 @@
 
     <Button
         android:id="@+id/btnLaunchRemoteControl"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:background="@android:color/black"
         android:textColor="@android:color/white"
         android:textColorHighlight="@android:color/white"
         android:layout_margin="10dp"
         android:text="@string/btnLaunchRemoteControl" />
+
+    <Button
+        android:id="@+id/btnLaunchAutonomous"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btnLaunchRemoteControl"
+        android:background="@android:color/black"
+        android:textColor="@android:color/white"
+        android:textColorHighlight="@android:color/white"
+        android:text="@string/btnLaunchAutonomous" />
 
 </RelativeLayout>
 
